--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /alpine/constants.py
-/alpine/transactions.db
+/alpine/assets/transactions.db
 /alpine/alpine.log
 /alpine/nohup.out
 /alpine/assets/all-data.csv
